--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "docs": "https://github.com/noahjahn/craft-php-fpm-status-monitor/blob/main/README.md"
     },
     "require": {
+        "php": "^8.0",
         "craftcms/cms": "^3.7.35"
     },
     "autoload": {
